--- a/HW2/Pagination_pilote.ipynb
+++ b/HW2/Pagination_pilote.ipynb
@@ -19,7 +19,7 @@
     "import requests\n",
     "import re\n",
     "\n",
-    "#Данный способ ломается в основной программе во время создания test_url, то есть он не сочетается с функцией format.",
+    "#Данный способ ломается в основной программе во время создания test_url, то есть он не сочетается с функцией format.\n",
     "url = \"http://api.github.com/users/ancatmara/repos?page={0}\"\n",
     "with open(\"token.txt\", \"r\") as f:\n",
     "        token = f.read()\n",
